0.9.1 (2009-06-02)
==================

Features
--------

- Add API named ``repoze.bfg.settings.get_settings`` which retrieves a
  derivation of values passed as the ``options`` value of
  ``repoze.bfg.router.make_app``.  This API should be preferred
  instead of using getUtility(ISettings).  I added a new
  ``repoze.bfg.settings`` API document as well.

Bug Fixes
---------

- Restored missing entry point declaration for bfg_alchemy paster
  template, which was accidentally removed in 0.9.

Documentation
-------------

- Fix a reference to ``wsgiapp`` in the ``wsgiapp2`` API documentation
  within the ``repoze.bfg.wsgi`` module.

API Removals
------------

- The ``repoze.bfg.location.locate`` API was removed: it didn't do
  enough to be very helpful and had a misleading name.

0.9 (2009-06-01)
================

Bug Fixes
---------

- It was not possible to register a custom ``IRoutesContextFactory``
  for use as a default context factory as documented in the "Hooks"
  chapter.

Features
--------

- The ``request_type`` argument of ZCML ``view`` declarations and
  ``bfg_view`` decorators can now be one of the strings ``GET``,
  ``POST``, ``PUT``, ``DELETE``, or ``HEAD`` instead of a reference to
  the respective interface type imported from
  ``repoze.bfg.interfaces``.

- The ``route`` ZCML directive now accepts ``request_type`` as an
  alias for its ``condition_method`` argument for symmetry with the
  ``view`` directive.

- The ``bfg_routesalchemy`` paster template now provides a unit test
  and actually uses the database during a view rendering.

Removals
--------

- Remove ``repoze.bfg.threadlocal.setManager``.  It was only used in
  unit tests.

- Remove ``repoze.bfg.wsgi.HTTPException``,
  ``repoze.bfg.wsgi.NotFound``, and ``repoze.bfg.wsgi.Unauthorized``.
  These classes were disused with the introduction of the
  ``IUnauthorizedView`` and ``INotFoundView`` machinery.

Documentation
-------------
