@@ -1,3 +1,14 @@
+Next release
+============
+
+Features
+--------
+
+- The default routes context
+  (``repoze.bfg.urldispatch.DefaultRoutesContext``) object now
+  subclasses from ``dict``.  This means you can use the mapping
+  protocol in views against it.
+
 0.9.1 (2009-06-02)
 ==================
 
